--- a/public/index.html
+++ b/public/index.html
@@ -8,19 +8,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" id="style">
     
 </head>
 
 <body>
     <div class="container">
-        <div class="flex-container">
+        <div class="flex_container" >
             <div class="title">Upload Your Image</div>
             <div class="description">File should be Jpeg, Png...</div>
             <div class="drag_and_drop" >    
                 <div class="box" draggable="true" id="eu">
                     <img class="img-prev" src="image.png">
-                    <p>Drag and drop your image here</p>
+                    <p class="drag">Drag and drop your image here</p>
                 </div>
             </div>
             <div class="or">or</div>
