--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,10 @@
             <div class="title">Upload Your Image</div>
             <div class="description">File should be Jpeg, Png...</div>
             <div class="drag_and_drop" >    
-                <div class="box" draggable="true" id="eu">
+                <div class="box" draggable="true" name="image">
                     <img class="img-prev" src="image.png">
                     <p class="drag">Drag and drop your image here</p>
-                </div>
+                </div> 
             </div>
             <div class="or">or</div>
             <div class="file_chooser"><button id="button">Choose a file</button></div>
