--- a/experience/index.html
+++ b/experience/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Oi</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="loading_box"> 
-            <p class="uploading">Uploading...</p>
-            <div class="loading">
-                <div class="load_bar"></div>
-            </div> 
-        </div>
-        
+            <div draggable="true "class="file loading_box" name="image" ></div>
+            <input class="input" type="submit" value="OK">
        
     </body>
     <script src="script.js"></script>
